--- a/index.html
+++ b/index.html
@@ -89,10 +89,19 @@
 				</div>
 			</fieldset>
 		</form>
-	  <script src="js/libraries/csv-parser.js"></script>
-	  <script src="js/libraries/data-grid-renderer.js"></script>
-	  <script src="js/libraries/handlebars-v1.3.0.min.js"></script>
-	  <script src="js/jquery.connoisseur.min.js"></script>
-	  <script src="js/global.min.js"></script>
+		<script src="js/libraries/csv-parser.js"></script>
+		<script src="js/libraries/data-grid-renderer.js"></script>
+		<script src="js/libraries/handlebars-v1.3.0.min.js"></script>
+		<script src="js/jquery.connoisseur.min.js"></script>
+		<script src="js/global.min.js"></script>
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			
+			ga('create', 'UA-9357642-9', 'benmacgowan.github.io');
+			ga('send', 'pageview');		
+		</script>
 	</body>
 </html>
